# hashminer

./: .gitignore  Cargo.toml  README.md  build.rs
kernels/: keccak256_device.cl
src/: main.rs
