
[package]
name = "hashminer"
version = "0.1.0"
edition = "2021"

[dependencies]
ocl = "0.19.7"
tiny-keccak = { version = "2.0", features = ["keccak"] }
num-bigint = "0.4"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1", features = ["derive"] }



